[tool.poetry]
name = "doc-search-llm"
version = "0.1.0"
description = ""
authors = ["Joy Cheng <joy.cheng@phntms.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vertexai = "^1.63.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
gradio = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
